# glfw-cpp-boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: CMakeLists.txt  global.h  main.cpp
src/api/: camera.cpp  camera.h  engine.cpp  engine.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  object.cpp  object.h  prefabs.h  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  window.cpp  window.h
src/engine/: engine.cpp  engine.h
src/extra/: glad.cpp
src/shaders/: example.frag  example.frag.in  example.vert  example.vert.in  light.frag  light.vert  lightsource.frag  test.frag  test.vert
src/utils/: colors.cpp  colors.h  error.cpp  error.h  log.cpp  log.h  paths.cpp  paths.h  shaders.cpp  shaders.h  ticker.h
